Fixed nav ul overflow

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ a:visited {
     height: 70px;
     margin: 0;
     padding: 0;
-
+    overflow: hidden;
     background: rgb(122, 122, 122);
     border-top: 5px solid rgb(161, 161, 161);
     border-left: 5px solid rgb(161, 161, 161);
